--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -32,6 +32,7 @@
     "highcharts": "^8.2.2",
     "highcharts-angular": "^2.9.0",
     "jquery": "3.4.1",
+    "ngx-logger": "^4.1.9",
     "node-sass": "^4.14.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
