--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,17 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "DbInfo": {
+    "ConnectionString": "Server=tcp:styx.database.windows.net,1433;Initial Catalog=utilsdb;Persist Security Info=False;User ID=andreev;Password=qJfpM86D;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "ConnectionStringUser": "Server = uk.sql01.yourwebservers.com,1786; User Id = TIMUR; Password = timur; Database = mydb;",
+    "ConnectionStringShard": "Server=tcp:styx.database.windows.net,1433;Initial Catalog=RealNet_Shard0;Persist Security Info=False;User ID=andreev;Password=qJfpM86D;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+
+  },
+
+  "AllowedHosts": "*"
 }
